--- a/admin/config.yml
+++ b/admin/config.yml
@@ -47,7 +47,7 @@ collections:
       - label: "Title"
         name: "title"
         widget: "string"
-      - label: "Subtitle"
+      - label: "Video Url"
         name: "subtitle"
         widget: "string"
         required: false
