--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ show_get_theme_btn: false
 show_hero: true
 email: youremail@test.com
 baseurl: ""
-two_columns_layout: false
+two_columns_layout: true
 menu:
   - title: Tamil Movies
     url: /category/tamil-movies
