--- a/admin/config.yml
+++ b/admin/config.yml
@@ -43,7 +43,7 @@ collections:
       - label: "Layout"
         name: "layout"
         widget: "hidden"
-        default: "post"
+        default: "isaipost"
       - label: "Title"
         name: "title"
         widget: "string"
