--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ paginate_content:
   debug: false
   collections:
     - posts
+    - category
   auto: false
   separator: --page-break--
   permalink: /:num/
