--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 google_analytics: UA-XXXXXXXX-X
 show_modal_on_finish_post: false
 medium_username: medium_username
-paginate: 10
 plugins:
   - jekyll-paginate
   - jekyll-paginate-content
@@ -43,6 +42,7 @@ disqus_username: disqus_username
 collections:
   authors:
     output: true
+paginate: 10
 linkedin_username: linkedin_username
 version: live
 title: TamilGun
@@ -73,5 +73,7 @@ email: youremail@test.com
 baseurl: ""
 two_columns_layout: true
 menu:
+  - title: Tamil Movies 2015
+    url: /category/tamil-movies-2015
   - title: Tamil Movies  2012
     url: /category/tamil-movies-2012
