--- a/admin/config.yml
+++ b/admin/config.yml
@@ -42,6 +42,7 @@ collections:
         format: "YYYY-MM-DD HH:mm:ss"
       - label: "Layout"
         name: "layout"
+        widget: "hidden"
         default: "post"
       - label: "Title"
         name: "title"
