--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,9 @@ email: youremail@test.com
 baseurl: ""
 two_columns_layout: true
 menu:
+  - url: /category/tamil-movies-2016
+    title: Tamil Movies 2016
   - title: Tamil Movies 2015
     url: /category/tamil-movies-2015
-  - title: Tamil Movies  2012
+  - title: Tamil Movies 2012
     url: /category/tamil-movies-2012
