--- a/admin/config.yml
+++ b/admin/config.yml
@@ -43,6 +43,19 @@ collections:
       - label: "Layout"
         name: "layout"
         default: "post"
+      - label: "Menu"
+        name: "coldi"
+        widget: "list"
+        required: false
+        fields:
+              - label: "Title"
+                name: "title"
+                widget: "string"
+                hint: "Text that will show up in the menu"
+              - label: "URL"
+                name: "url"
+                widget: "string"
+                hint: "Ex: /contact"
       - label: "Title"
         name: "title"
         widget: "string"
@@ -518,5 +531,3 @@ collections:
             name: "sent_message_url"
             hint: "URL where the user will be redirected for after submit the contact form. Ex: /contact/message-sent/"
             required: false
-
-
