Update Settings “site”

--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,14 @@ email: youremail@test.com
 baseurl: ""
 two_columns_layout: true
 menu:
+  - title: Tamil Movies 2020
+    url: /category/tamil-movies-2020
+  - title: Tamil Movies 2019
+    url: /category/tamil-movies-2019
+  - url: /category/tamil-movies-2018
+    title: Tamil Movies 2018
+  - title: Tamil Movies 2017
+    url: /category/tamil-movies-2017
   - url: /category/tamil-movies-2016
     title: Tamil Movies 2016
   - title: Tamil Movies 2015
