--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ paginate_path: /page/:num/
 sass:
   style: compressed
 markdown: kramdown
-url: https://tamilgun.isaiminiweb.online
+url: 
 facebook_username: facebook_username
 sent_message_url: /contact/message-sent/
 paginate_content:
@@ -45,10 +45,10 @@ collections:
 paginate: 10
 linkedin_username: linkedin_username
 version: live
-title: TamilGun
+title: Tamilrockers.net
 language: en
-description: Watch and Download Tamil, Telugu, Hindi, Malayalam, Kannada,
-  English, Movies and Web series 2020
+description: Download Tamil, Telugu, Hindi, Malayalam, Kannada,
+  English, Movies and Web series Old torrents direct download links
 tags:
   - tamil
   - hindi
