--- a/admin/config.yml
+++ b/admin/config.yml
@@ -22,17 +22,16 @@ collections:
         widget: "string"
       - label: "Slug"
         name: "slug"
-        widget: "hidden"
-        default: "{{slug}}"
+        widget: "string"
       - label: "Description"
         name: "description"
         widget: "string"
         required: false
-  - label: "Posts"
+  - label: "File"
     name: "posts"
     folder: "_posts"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"
     preview_path: "{{title}}"
     extension: "md"
     fields:
@@ -42,18 +41,25 @@ collections:
         format: "YYYY-MM-DD HH:mm:ss"
       - label: "Layout"
         name: "layout"
-        default: "post"
+        default: "shareme"
       - label: "Title"
         name: "title"
         widget: "string"
-      - label: "Year"
-        name: "year"
+      - label: "Type"
+        name: "type"
+        default: "Video"
         widget: "string"
-      - label: "Language"
-        name: "language"
+      - label: "Size"
+        name: "size"
         widget: "string"
-      - label: "Quality"
-        name: "quality"
+      - label: "Torrent Link"
+        name: "torrent"
+        widget: "string"
+      - label: "Magnet"
+        name: "magnet"
+        widget: "string"
+      - label: "Direct Link"
+        name: "direct"
         widget: "string"
       - label: "Category"
         name: "category"
@@ -62,43 +68,6 @@ collections:
         searchFields: ["title"]
         valueField: "slug"
         displayFields: ["title"]
-        required: false
-      - label: "Size"
-        name: "size"
-        widget: "string"
-      - label: "Video Url"
-        name: "video"
-        widget: "string"
-        required: false
-      - label: "Poster Url"
-        name: "poster"
-        widget: "string"
-        required: false
-      - label: "Description"
-        name: "description"
-        hint: "This will be used across the pages and for search engines."
-        widget: "string"
-        required: false
-      - label: "Tags"
-        name: "tags"
-        hint: "Separate with commas. These will also be used as keywords for search engines."
-        widget: "list"
-        required: false
-      - label: "Author"
-        name: "author"
-        widget: "relation"
-        collection: "authors"
-        displayFields: [display_name]
-        searchFields: [display_name]
-        valueField: "name"
-        required: false
-      - label: "Paginate"
-        name: "paginate"
-        widget: "boolean"
-        default: false
-      - label: "Body"
-        name: "body"
-        widget: "markdown"
         required: false
   - label: "Pages"
     name: "pages"
